tests/ui/de-double-from-attribute.stderr
error: The `from` field attribute is defined twice.
 --> tests/ui/de-double-from-attribute.rs:6:14
  |
6 |     #[deserr(from(String) = usize::FromStr -> usize)]
  |              ^^^^
